# pbde-assigment

./: .gitignore  README.md  devenv.nix  eda.ipynb  main.py  pyproject.toml
data/: events-2024.json  events-2025.json  weather-2024.csv  weather-2025.csv
documents/journal/: journal.typ
documents/report/: report.typ  sources.bib
