[project]
name = "pbde-assigment"
version = "0.1.0"
authors = [{name = "Arnau Pérez Reverte", email = "arnau.perez.reverte@estudiantat.upc.edu"}]
description = "PBDE Final Assigment (EDA)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.4.3",
    "holidays>=0.87",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "pyarrow>=22.0.0",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "xgboost>=3.1.2",
]

[tool.uv]
python-downloads = "auto"
